--- a/assets/HtML/index.html
+++ b/assets/HtML/index.html
@@ -20,9 +20,9 @@
         <div class="title">
             <h1>Seja um Radiante</h1>
         </div>
-         <div class="login">
-            <a href="login.html">Entrar</a>
-        </div>
+        <form class="botao" action="login.html">
+            <button class="login" type="submit">Entrar</button>
+        </form>
         
         <nav class="navegacao">
             <ul>
@@ -38,18 +38,25 @@
         </nav>
     </header>
     <main>
-        <h3>
-            Está cansado de perder rankeds e ver seus amigos subirem enquanto você fica para trás? Descubra as melhores estratégias, táticas e dicas exclusivas para transformar seu jogo e dominar o Valorant como nunca antes! <br>
+        <div class="text">
+            <h3>
+                <ul>
+                    <li>Está cansado de perder rankeds e ver seus amigos subirem enquanto você fica para trás? Descubra as melhores estratégias, táticas e dicas exclusivas para transformar seu jogo e dominar o Valorant como nunca antes!</li> <br><br>
 
-            Nosso objetivo é simples: levar você ao próximo nível! Aqui você encontra tudo o que precisa para melhorar no Valorant — desde guias de agentes até insights sobre mapas e mecânicas de jogo. Venha fazer parte dessa jornada de evolução! <br>
+                    <li>Nosso objetivo é simples: levar você ao próximo nível! Aqui você encontra tudo o que precisa para melhorar no Valorant — desde guias de agentes até insights sobre mapas e mecânicas de jogo. Venha fazer parte dessa jornada de evolução!</li> <br><br>
 
-            Valorant é mais que um jogo, é um campo de batalha onde cada detalhe conta. Nosso site foi criado para ajudar jogadores como você a alcançarem o topo, com métodos testados e aprovados pelos melhores. <br>
+                    <li>Valorant é mais que um jogo, é um campo de batalha onde cada detalhe conta. Nosso site foi criado para ajudar jogadores como você a alcançarem o topo, com métodos testados e aprovados pelos melhores.</li> <br><br>
 
-            Dominar o Valorant vai além de mira e reflexos. É preciso estratégia, inteligência e prática. Nosso site oferece um conteúdo completo para você se tornar um jogador imbatível — e se destacar em cada partida! <br>
+                    <li>Dominar o Valorant vai além de mira e reflexos. É preciso estratégia, inteligência e prática. Nosso site oferece um conteúdo completo para você se tornar um jogador imbatível — e se destacar em cada partida!</li> <br><br>
 
-            Não importa se você está começando ou já joga há anos, sempre há espaço para evolução. Aqui, você encontrará guias detalhados, vídeos explicativos e insights que transformarão seu desempenho. Venha ser parte dos melhores! <br>
-        </h3>
+                    <li>Não importa se você está começando ou já joga há anos, sempre há espaço para evolução. Aqui, você encontrará guias detalhados, vídeos explicativos e insights que transformarão seu desempenho. Venha ser parte dos melhores!</li> <br><br>
+                </ul>
+            </h3>
+        </div>
 
+        <button class="icon">
+            <img src="../imgs/cypher-aprontando sem fundo 2 png.png" alt="">
+        </button>
 
 
     </main>
