--- a/assets/HtML/login.html
+++ b/assets/HtML/login.html
@@ -37,7 +37,7 @@
         <button class="login" type="submit">Login</button>
     </div>
     <div class="register">
-        Não tem uma conta? <a href="">Cadastre-se</a>
+        Não tem uma conta? <a href="##">Cadastre-se</a>
     </div>
 
 </form>
