--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div>
+        <div class="video">
             <video autoplay muted loop><source src="../Gifs/4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4" type="video/mp4"></video>
         </div>
         <div class="title">
