--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -24,18 +24,53 @@
             <button class="login" type="submit">Entrar</button>
         </form>
         
-        <nav class="navegacao">
+<nav class="navegacao">
             <ul>
-                <li><a class="link" href="Apresentação.html">Apresentação</a></li>
-                <li><a class="link" href="Agentes.html">Agentes e habilidades</a></li>
-                <li><a class="link" href="Mapas.html">Mapas</a></li>
-                <li><a class="link" href="Mira.html">Mira e sensibilidade</a></li>
-                <li><a class="link" href="Movimentação.html">Movimentação</a></li>
-                <li><a class="link" href="Comunicação.html">Comunicação</a></li>
-                <li><a class="link" href="Estratégias.html">Estratégias</a></li>
-                <li><a class="link" href="Economia.html">Economia</a></li>  
-            </ul>
+                <li>
+                    <form class="link" action="Apresentação.html">
+                        <button class="pags" type="submit">Apresentação</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Agentes.html">
+                        <button class="pags" type="submit">Agentes e habilidades</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Mapas.html">
+                        <button class="pags" type="submit">Mapas</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Mira.html">
+                        <button class="pags" type="submit">Mira e sensibilidade</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Movimentação.html">
+                        <button class="pags" type="submit">Movimentação</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Comunicação.html">
+                        <button class="pags" type="submit">Comunicação</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Estratégias.html">
+                        <button class="pags" type="submit">Estratégias</button>
+                    </form>
+                </li>
+                <li>
+                    <form class="link" action="Economia.html">
+                        <button class="pags" type="submit">Economia</button>
+                    </form>
+                </li>    
         </nav>
+
+
+
+
     </header>
     <main>
         <div class="text">
