--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domine Valorant: Dicas e Estratégias Essenciais de um Radiante</title>
     <base target="_blank">
-    <link rel="stylesheet" type="text/css" href="../CSS/style.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
 </head>
 
 <body>
@@ -69,15 +69,16 @@
         </nav>
     </header>
     <main>
-        <div class="text">
+        <div class="content">
             <div class="text-one">
-                    <h3>Está cansado de perder rankeds e ver seus amigos subirem enquanto você fica para trás? Descubra as melhores estratégias, táticas e dicas exclusivas para transformar seu jogo e dominar o Valorant como nunca antes!</h3><br>
-                    <h3>Nosso objetivo é simples: levar você ao próximo nível! Aqui você encontra tudo o que precisa para melhorar no Valorant — desde guias de agentes até insights sobre mapas e mecânicas de jogo. Venha fazer parte dessa jornada de evolução!</h3><br>
+                    <h2>Domine o Valorant, Eleve o seu nível!</h2>
+                    <p>Está cansado de perder rankeds e ver seus amigos subirem enquanto você fica para trás? Descubra as melhores estratégias, táticas e dicas exclusivas para transformar seu jogo e dominar o Valorant como nunca antes!</p>
+                    <p>Nosso objetivo é simples: levar você ao próximo nível! Aqui você encontra tudo o que precisa para melhorar no Valorant — desde guias de agentes até insights sobre mapas e mecânicas de jogo. Venha fazer parte dessa jornada de evolução!</p>
             </div>
             <div class="text-two">
-                    <h3>Valorant é mais que um jogo, é um campo de batalha onde cada detalhe conta. Nosso site foi criado para ajudar jogadores como você a alcançarem o topo, com métodos testados e aprovados pelos melhores.</h3><br>
-                    <h3>Dominar o Valorant vai além de mira e reflexos. É preciso estratégia, inteligência e prática. Nosso site oferece um conteúdo completo para você se tornar um jogador imbatível — e se destacar em cada partida!</h3><br>
-                    <h3>Não importa se você está começando ou já joga há anos, sempre há espaço para evolução. Aqui, você encontrará guias detalhados, vídeos explicativos e insights que transformarão seu desempenho. Venha ser parte dos melhores!</h3><br>
+                    <p>Valorant é mais que um jogo, é um campo de batalha onde cada detalhe conta. Nosso site foi criado para ajudar jogadores como você a alcançarem o topo, com métodos testados e aprovados pelos melhores.</p>
+                    <p>Dominar o Valorant vai além de mira e reflexos. É preciso estratégia, inteligência e prática. Nosso site oferece um conteúdo completo para você se tornar um jogador imbatível — e se destacar em cada partida!</p>
+                    <p>Não importa se você está começando ou já joga há anos, sempre há espaço para evolução. Aqui, você encontrará guias detalhados, vídeos explicativos e insights que transformarão seu desempenho. Venha ser parte dos melhores!</p>
             </div>
         </div>
 
