--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Domine Valorant: Dicas e Estratégias Essenciais de um Radiante</title>
     <base target="_blank">
     <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/features.css"/>
+    <script src="JS/script.js"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'rel='stylesheet'>
 </head>
 
 <body>
@@ -24,7 +27,15 @@
             <button class="login" type="submit">Entrar</button>
         </form>
         
-<nav class="navegacao">
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Busca...">
+                <div id="search-results"></div>
+                <i i class='bx  bx-search-alt'  style='color:#ffffff'></i>  
+            </div>
+
+            <button id="theme-toggle"><i class='bx  bx-moon'  style='color:#ffffff'></i></button>
+     
+        <nav class="navegacao">
             <ul>
                 <li>
                     <form class="link" action="Apresentação.html">
