--- a/Economia.html
+++ b/Economia.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economia - Valorant</title>    <link rel="stylesheet" type="text/css" href="CSS/style.css"/></head>
+    <title>Economia - Valorant</title>    
+    <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/features.css"/>
+    <script src="JS/script.js"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'rel='stylesheet'>
+</head>
 <body>
     <header class="fundo">
         <div class="video">
@@ -15,6 +20,15 @@
         <form class="botao" action="login.html">
             <button class="login" type="submit">Entrar</button>
         </form>
+        
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Busca...">
+                <div id="search-results"></div>
+                <i i class='bx  bx-search-alt'  style='color:#ffffff'></i>  
+            </div>
+
+            <button id="theme-toggle"><i class='bx  bx-moon'  style='color:#ffffff'></i></button>
+
         <nav class="navegacao">
             <ul>
                 <li>
@@ -104,12 +118,13 @@
                 <li><strong>Bônus de Derrota</strong>: Entenda como o bônus de derrota funciona. Às vezes, perder uma rodada de forma estratégica (sem gastar muito) pode ser benéfico para a economia a longo prazo.</li>
                 <li><strong>Compre Habilidades Essenciais</strong>: Mesmo em rodadas eco, algumas habilidades podem ser cruciais para conseguir abates ou informações. Priorize-as.</li>
             </ul>
-            <img src="imgs/valorant_economy_guide.png" alt="Guia de Economia Valorant">
+            <img src="imgs/valorant_economic_guide_final.png" alt="Guia de Economia Valorant">
             <p>
                 Dominar a economia em Valorant é uma habilidade que vem com a experiência e a prática. Ao tomar decisões de compra inteligentes e coordenar-se com sua equipe, você aumentará significativamente suas chances de vitória e de subir de rank.
             </p>
         </div>
     </main>
+            <button id="back-to-top">↑</button>
     <footer>
     </footer>
 </body>
