--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -21,10 +21,10 @@
 
     <header>
         <div class="video">
-            <img src="imgs/NaVWIpBNVkGU.jpg" alt="Valorant Background" style="width:100%; height:100%; object-fit:cover;">
+            <img src="imgs/Sova, omen e cypher.jpg" alt="Valorant Background" style="width:100%; height:100%; object-fit:cover;">
         </div>
         <div class="title">
-            <h1>Funcionalidades Avançadas</h1>
+            <h1 class="titulo">Funcionalidades Avançadas</h1>
         </div>
         <form class="botao" action="login.html">
             <button class="login" type="submit">Entrar</button>
@@ -122,7 +122,7 @@
             <p>
                 Clique em qualquer imagem do conteúdo para abri-la em um modal em tela cheia. Isso permite uma visualização melhor dos detalhes das imagens, especialmente útil para mapas e guias visuais.
             </p>
-            <img src="imgs/valorant_crosshair_placement.png" alt="Exemplo de imagem clicável">
+            <img src="imgs/Cypher bolado.jpg" alt="Exemplo de imagem clicável">
 
             <h3 id="tooltips">Tooltips Informativos</h3>
             <p>
