--- a/login.html
+++ b/login.html
@@ -18,7 +18,8 @@
     <h1>Vava Expert</h1>
     <div class="input-box">
         <input placeholder="Usuário" type="email">
-        <i class="bx bxs-user"></i> 
+        <i i class='bx  bxs-user'></i>  
+         
     </div>
     <div class="input-box">
         <input placeholder="Senha" type="password">
