--- a/Movimentação.html
+++ b/Movimentação.html
@@ -24,7 +24,7 @@
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Busca...">
                 <div id="search-results"></div>
-                <i i class='bx  bx-search-alt'  style='color:#ffffff'></i>  
+                <i i class='bx  bx-search-alt'  style='color:#007bff'></i>  
             </div>
 
             <button id="theme-toggle"><i class='bx  bx-moon'  style='color:#ffffff'></i></button>
