--- a/Apresentação.html
+++ b/Apresentação.html
@@ -6,7 +6,7 @@
     <title>Apresentação do Jogo - Valorant</title>    
     <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
     <link rel="stylesheet" type="text/css" href="CSS/features.css"/>
-    <script src="JS/script.js"></script>
+    <script src="script.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'rel='stylesheet'>
 </head>
 <body>
