--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -196,7 +196,7 @@
     <footer>
     </footer>
 
-    <script src="JS/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
