--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <base target="_blank">
     <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
     <link rel="stylesheet" type="text/css" href="CSS/features.css"/>
-    <script src="JS/script.js"></script>
+    <script src="script.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'rel='stylesheet'>
 </head>
 
 <body>
     <header>
         <div class="video">
-            <video autoplay muted loop><source src="../Gifs/4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4" type="video/mp4"></video>
+            <video autoplay muted loop><source src="4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4"></video>
         </div>
-        <div class="title">
-            <h1>Seja um Radiante</h1>
+        <div>
+            <h1 class="titulo">Seja um Radiante</h1>
         </div>
         <form class="botao" action="login.html">
             <button class="login" type="submit">Entrar</button>
@@ -30,7 +30,7 @@
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Busca...">
                 <div id="search-results"></div>
-                <i i class='bx  bx-search-alt'  style='color:#ffffff'></i>  
+                <i i class='bx  bx-search-alt'  style='color:#007bff'></i>  
             </div>
 
             <button id="theme-toggle"><i class='bx  bx-moon'  style='color:#ffffff'></i></button>
