fundo da pagina inicial

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="fundo-principal">
         <div class="video">
             <video autoplay muted loop><source src="4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4"></video>
         </div>
