--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="video">
             <video autoplay muted loop><source src="4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4"></video>
         </div>
-        <div>
-            <h1 class="titulo">Seja um Radiante</h1>
+        <div class="title">
+            <h1>Seja um Radiante</h1>
         </div>
         <form class="botao" action="login.html">
             <button class="login" type="submit">Entrar</button>
