Organização das pastas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="fundo-principal">
         <div class="video">
-            <video autoplay muted loop><source src="4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4"></video>
+            <video autoplay muted loop><source src="./Gifs/4K_60FPS Cypher Animated Wallpaper - Valorant Fanart(1080P_60FPS).mp4"></video>
         </div>
         <div class="title">
             <h1>Seja um Radiante</h1>
