--- a/Mapas.html
+++ b/Mapas.html
@@ -6,7 +6,7 @@
     <title>Mapas - Valorant</title>    
     <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
     <link rel="stylesheet" type="text/css" href="CSS/features.css"/>
-    <script src="script.js"></script>
+    <script src="./JS/script.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'rel='stylesheet'>
 </head>
 <body>
