botão de tema update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <div id="search-results"></div> 
             </div>
 
-            <button id="theme-toggle"><i class='bx  bx-moon'  style='color:#ffffff'></i></button>
+            <button id="theme-toggle">
+                <i class='bx  bx-moon'  style='color:#ffffff'></i>
+            </button>
      
         <nav class="navegacao">
             <ul>
