Botão de busca estilizado

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Busca...">
-                <i i class='bx  bx-search-alt'  style='color:#007bff'></i>
+                <i i class='bx  bx-search-alt'></i>
                 <div id="search-results"></div> 
             </div>
 
